--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.hpe.adm.octane.ideplugins</groupId>
 	<artifactId>octane-eclipse-parent</artifactId>
-	<version>12.60.52-SNAPSHOT</version>
+	<version>12.60.60-SNAPSHOT</version>
 	<packaging>pom</packaging>
 
 	<modules>
@@ -20,7 +20,7 @@
 		<logback.version>1.0.1</logback.version>
 
 		<tycho-version>0.26.0</tycho-version>
-		<octane.common.version>1.6.3-SNAPSHOT</octane.common.version>
+		<octane.common.version>1.6.2</octane.common.version>
 		<java.version>1.8</java.version>
 		<signhp.version>15.0</signhp.version>
 		<maven.compiler.target>1.8</maven.compiler.target>
