--- a/octane-eclipse-plugin/build.properties
+++ b/octane-eclipse-plugin/build.properties
@@ -18,7 +18,6 @@ bin.includes = plugin.xml,\
                lib/google-http-client.jar,\
                lib/google-oauth-client.jar,\
                lib/gson.jar,\
-               lib/guava-jdk5.jar,\
                lib/guava.jar,\
                lib/guice.jar,\
                lib/httpclient.jar,\
@@ -31,4 +30,9 @@ bin.includes = plugin.xml,\
                lib/octane-plugin-common.jar,\
                lib/sdk-src.jar,\
                lib/velocity.jar,\
-               lib/sdk-extension-src.jar
+               lib/sdk-extension-src.jar,\
+               lib/google-http-client-apache-v2.jar,\
+               lib/grpc-context.jar,\
+               lib/j2objc-annotations.jar,\
+               lib/opencensus-api.jar,\
+               lib/opencensus-contrib-http-util.jar
