--- a/pom.xml
+++ b/pom.xml
@@ -33,7 +33,7 @@
 		<repository>
 			<id>neon</id>
 			<layout>p2</layout>
-			<url>http://download.eclipse.org/releases/neon</url>
+			<url>https://download.eclipse.org/releases/neon/201705151400/</url>
 		</repository>
 	</repositories>
 
