--- a/octane-eclipse-feature/pom.xml
+++ b/octane-eclipse-feature/pom.xml
@@ -16,6 +16,8 @@
 	<profiles>
 		<profile>
 			<!-- Used for signing built jars -->
+			<!-- This profile is not needed development, should only be run by the
+				CI -->
 			<id>signhp</id>
 			<build>
 				<defaultGoal>install</defaultGoal>
@@ -25,14 +27,14 @@
 						<artifactId>tycho-packaging-plugin</artifactId>
 						<version>${tycho-version}</version>
 					</plugin>
-					<!-- Has to be after exectuted after the tycho package plugin -->
+					<!-- Has to be executed after the tycho package plugin -->
 					<plugin>
 						<groupId>SignHPUtility.plugin</groupId>
 						<artifactId>unified-signhp-maven-plugin</artifactId>
 						<version>1.0.5</version>
 						<executions>
 							<execution>
-								<phase>prepare-package</phase>
+								<phase>pre-integration-test</phase>
 								<goals>
 									<goal>signHP</goal>
 								</goals>
