--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<logback.version>1.0.1</logback.version>
 
-		<tycho-version>0.26.0</tycho-version>
+		<tycho-version>2.5.0</tycho-version>
 		<octane.common.version>1.6.7-SNAPSHOT</octane.common.version>
 		<java.version>1.8</java.version>
 		<signhp.version>15.0</signhp.version>
@@ -32,9 +32,9 @@
 
 	<repositories>
 		<repository>
-			<id>neon</id>
+			<id>photon</id>
 			<layout>p2</layout>
-			<url>https://download.eclipse.org/releases/neon/</url>
+			<url>https://download.eclipse.org/releases/photon</url>
 		</repository>
 	</repositories>
 
