--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.hpe.adm.octane.ideplugins</groupId>
 	<artifactId>octane-eclipse-parent</artifactId>
-	<version>16.0.300-SNAPSHOT</version>
+	<version>15.1.90-SNAPSHOT</version>
 	<packaging>pom</packaging>
 
 	<modules>
@@ -20,7 +20,7 @@
 		<logback.version>1.0.1</logback.version>
 
 		<tycho-version>1.7.0</tycho-version>
-		<octane.common.version>1.7.0</octane.common.version>
+		<octane.common.version>1.6.8-SNAPSHOT</octane.common.version>
 		<java.version>1.8</java.version>
 		<signhp.version>15.0</signhp.version>
 		<sign-hp-utility.version>1.0.5</sign-hp-utility.version>
