--- a/octane-eclipse-feature/pom.xml
+++ b/octane-eclipse-feature/pom.xml
@@ -8,7 +8,7 @@
 		<relativePath>..</relativePath>
 		<groupId>com.hpe.adm.octane.ideplugins</groupId>
 		<artifactId>octane-eclipse-parent</artifactId>
-		<version>16.0.400-SNAPSHOT</version>
+		<version>2022.0.0</version>
 	</parent>
 	<artifactId>octane.eclipse.feature</artifactId>
 	<packaging>eclipse-feature</packaging>
