--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.hpe.adm.octane.ideplugins</groupId>
 	<artifactId>octane-eclipse-parent</artifactId>
-	<version>16.0.400-SNAPSHOT</version>
+	<version>2022.0.0</version>
 	<packaging>pom</packaging>
 
 	<modules>
