--- a/octane-eclipse-plugin/.classpath
+++ b/octane-eclipse-plugin/.classpath
@@ -7,11 +7,7 @@
 	<classpathentry exported="true" kind="lib" path="lib/opencensus-contrib-http-util.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/octane-plugin-common.jar" sourcepath="/octane-plugin-common"/>
 	<classpathentry kind="lib" path="lib/slf4j-api.jar"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8">
-		<attributes>
-			<attribute name="module" value="true"/>
-		</attributes>
-	</classpathentry>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry exported="true" kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry exported="true" kind="lib" path="lib/aopalliance.jar"/>
