--- a/octane-eclipse-plugin/.classpath
+++ b/octane-eclipse-plugin/.classpath
@@ -1,20 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry exported="true" kind="lib" path="lib/google-http-client-apache-v2.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/grpc-context.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/j2objc-annotations.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/opencensus-api.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/opencensus-contrib-http-util.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/octane-plugin-common.jar" sourcepath="/octane-plugin-common"/>
-	<classpathentry kind="lib" path="lib/slf4j-api.jar"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-11"/>
 	<classpathentry exported="true" kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
-	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="src" path="src/"/>
 	<classpathentry exported="true" kind="lib" path="lib/aopalliance.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/commons-codec.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/commons-collections.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/commons-lang.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/commons-logging.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/failureaccess.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/google-http-client-gson.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/google-http-client-jackson2.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/google-http-client.jar"/>
@@ -30,6 +24,14 @@
 	<classpathentry exported="true" kind="lib" path="lib/jsr305.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/sdk-src.jar" sourcepath="/octane-plugin-common/src"/>
 	<classpathentry exported="true" kind="lib" path="lib/velocity.jar"/>
+	<classpathentry exported="true" kind="lib" path="target" sourcepath="target"/>
 	<classpathentry exported="true" kind="lib" path="lib/sdk-extension-src.jar"/>
-	<classpathentry kind="output" path="target/classes"/>
+	<classpathentry exported="true" kind="lib" path="lib/slf4j-api.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/octane-plugin-common.jar" sourcepath="/octane-plugin-common"/>
+	<classpathentry exported="true" kind="lib" path="lib/google-http-client-apache-v2.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/grpc-context.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/j2objc-annotations.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/opencensus-api.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/opencensus-contrib-http-util.jar"/>
+	<classpathentry kind="output" path="bin"/>
 </classpath>
