--- a/octane-eclipse-plugin/build.properties
+++ b/octane-eclipse-plugin/build.properties
@@ -10,6 +10,7 @@ bin.includes = plugin.xml,\
                lib/commons-collections.jar,\
                lib/commons-lang.jar,\
                lib/commons-logging.jar,\
+               lib/failureaccess.jar,\
                lib/google-http-client-gson.jar,\
                lib/google-http-client-jackson2.jar,\
                lib/google-http-client.jar,\
