--- a/octane-eclipse-plugin/plugin.xml
+++ b/octane-eclipse-plugin/plugin.xml
@@ -104,7 +104,7 @@
       <page
             class="com.hpe.octane.ideplugins.eclipse.preferences.PluginPreferencePage"
             id="com.hpe.octane.ideplugins.eclipse.preferences.PluginPreferencePage"
-            name="OpenText Core Software Delivery Platform Settings">
+            name="OpenText™️ Core Software Delivery Platform Settings">
       </page>
    </extension>
    <extension
